<resources>
    <string name="app_name">Cloud Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="base_url">https://cloud-chat-450.herokuapp.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Cloud Chat</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_weather">Weather</string>
    <string name="title_weather_forecast">Weather Forecast</string>
    <string name="title_weather_search">Weather Search</string>
    <string name="title_weather_map">Weather Map</string>
    <string name="title_profile">Profile</string>


    <string name="auth_register">Register</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_first_name">First Name</string>
    <string name="auth_last_name">Last Name</string>
    <string name="auth_confirm_password">Confirm Password</string>
    <string name="auth_back">Back</string>
    <string name="auth_username">Username</string>

    <string name="auth_dummy_email">fakeEmail@email.com</string>
    <string name="auth_dummy_password">12345</string>

    <string name="contact_email">Contact Email</string>
    <string name="contact_username">Contact Username</string>
    <string name="contact_name">Contact Name</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="contact_no_contacts">You have no contacts!</string>
    <string name="contact_search_by">Search By</string>
    <string name="action_remove_contact">Remove Contact</string>
    <string name="tab_all_contacts">My Contacts</string>
    <string name="tab_pending_contacts">Pending</string>
    <string name="tab_add_contact">Add Contact</string>
    <string name="contacts_pending_added_me">Added Me</string>
    <string name="contacts_pending_approval">Sent Requests (Awaiting Approval)</string>
    <string name="contacts_pending_no_requests">You have no contact requests!</string>
    <string name="contacts_pending_no_sent_requests">You have no sent requests awaiting approval!</string>
    <string name="contacts_added_contact">Successfully sent contact request!</string>
    <string-array name="contact_search_by_options">
        <item>Email</item>
        <item>Username</item>
    </string-array>

    <string name="text_verification_checkEmail">Please check your email and follow the link to verify your account. Click "Return to Sign In" when completed.</string>
    <string name="text_verification_retry">If you do not see an email, click "Send Again" to send another verification email.</string>
    <string name="button_verification_retry">Send Again</string>
    <string name="button_verification_return">Return to Sign In</string>

    <string name="button_create_chat">Create Chat</string>
    <string name="tab_add_chat">Add Chat</string>
    <string name="tab_add_delete_contact">Contacts</string>
    <string name="text_add_chat">Type desired chat name here</string>
    <string name="tab_show_chats">Chat</string>
    <string name="tab_show_chatlist">ChatList</string>
    <string name="button_delete_contact_from_chat">Delete From Chat</string>
    <string name="button_add_to_chat">Add to Chat</string>
    <string name="imagebutton_go_to_chat"></string>
    <string name="text_select_chat">Select Chat</string>
    <string name="text_chatID">#</string>
    <string name="text_chat_name">ChatName</string>
    <string name="text_contacts_names">Contacts Names</string>
    <string name="text_no_chats">You currently have no Chats</string>
    <string name="text_chat_Id">Chat ID: </string>
    <string name="chat_select_contact">Select Contact</string>
    <string name="chat_manage_chat_title">Manage Chats</string>
    <string name="chat_timestamp">TimeStamp</string>
    <string name="text_chat_display_contacts">List of Contacts in chat</string>
    <string name="chat_manip_error">Error in chat management!</string>
    <string name="chat_manip_success">Successfully altered chat!</string>
    <string-array name="chat_search_by_options">
        <item>Email</item>
        <item>Username</item>
    </string-array>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_more">More</string>
    <string name="menu_about_app">About app</string>
    <string name="menu_saved">Saved</string>

    <string name="weather_search">Search for Location</string>

    <string name="profile_name">Name:</string>
    <string name="profile_username">Username:</string>
    <string name="profile_email">Email:</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="image_logo">CloudChat</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_maps">Map</string>

    <string name="theme_light_mode">Light Mode</string>
    <string name="theme_dark_mode">Dark Mode</string>
    <string name="theme_options">Change Themes</string>

</resources>