<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.groupproject_g3.home.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_page_home" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.groupproject_g3.weather.fragments.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_page_weather" />
    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.groupproject_g3.message.fragments.MessageFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_page_messages" />
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.groupproject_g3.contact.fragments.ContactFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_page_contact" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.groupproject_g3.profile.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_page_profile" />
</navigation>