<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="Search"
            app:actionViewClass="android.widget.SearchView" />
        <item
            android:id="@+id/menu_weather"
            android:title="Dashboard" />
        <item
            android:id="@+id/action_sign_out"
            android:title="@string/action_sign_out" />
    </group>

    <item android:title="@string/menu_more">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_aboutApp"
                    android:title="@string/menu_about_app" />
            </group>
        </menu>
    </item>

</menu>