<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.fragments.ProfileFragment" >

    <TextView
        android:id="@+id/profile_name_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="200dp"
        android:text="@string/profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="200dp"
        android:text="@string/profile_name"
        app:layout_constraintStart_toEndOf="@+id/profile_name_prompt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_username_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_prompt" />

    <TextView
        android:id="@+id/profile_username_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:text="@string/auth_username"
        app:layout_constraintBottom_toBottomOf="@+id/profile_username_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_username_prompt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/profile_email_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username_prompt" />

    <TextView
        android:id="@+id/profile_email_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/auth_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toEndOf="@+id/profile_email_prompt"
        app:layout_constraintTop_toBottomOf="@+id/profile_username_display" />
</androidx.constraintlayout.widget.ConstraintLayout>