<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.fragments.RegisterFragment">

    <EditText
        android:id="@+id/text_register_first_name"
        android:layout_width="@dimen/auth_textEdit_width"
        android:layout_height="@dimen/auth_textEdit_height"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/auth_first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorOnSurface"/>

    <EditText
        android:id="@+id/text_register_last_name"
        android:layout_width="@dimen/auth_textEdit_width"
        android:layout_height="@dimen/auth_textEdit_height"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/auth_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_register_first_name"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorOnSurface"/>

    <EditText
        android:id="@+id/text_register_email"
        android:layout_width="@dimen/auth_textEdit_width"
        android:layout_height="@dimen/auth_textEdit_height"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/auth_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_register_last_name"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorOnSurface"/>

    <EditText
        android:id="@+id/text_register_username"
        android:layout_width="@dimen/auth_textEdit_width"
        android:layout_height="@dimen/auth_textEdit_height"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/auth_username"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_register_email"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorOnSurface"/>

    <EditText
        android:id="@+id/text_register_password"
        android:layout_width="@dimen/auth_textEdit_width"
        android:layout_height="@dimen/auth_textEdit_height"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_register_username"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorOnSurface"/>

    <EditText
        android:id="@+id/text_register_password2"
        android:layout_width="@dimen/auth_textEdit_width"
        android:layout_height="@dimen/auth_textEdit_height"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/auth_confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_register_password"
        android:textColor="?attr/colorOnSurface"
        android:backgroundTint="?attr/colorOnSurface"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="@dimen/auth_button_width"
        android:layout_height="@dimen/auth_button_height"
        android:layout_marginTop="16dp"
        android:text="@string/auth_register"
        app:layout_constraintEnd_toEndOf="@+id/text_register_password2"
        app:layout_constraintTop_toBottomOf="@+id/text_register_password2" />

    <ImageView
        android:id="@+id/logo_register_cloudChat"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_cloud_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>