<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

    <EditText
        android:id="@+id/text_signin_password"
        android:layout_width="351dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:autoText="false"
        android:autofillHints="@string/auth_password"
        android:ems="10"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_signin_email" />

    <EditText
        android:id="@+id/text_signin_email"
        android:layout_width="351dp"
        android:layout_height="51dp"
        android:layout_marginTop="340dp"
        android:autoText="false"
        android:autofillHints="@string/auth_email"
        android:ems="10"
        android:hint="@string/auth_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_signin_register"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="15dp"
        android:text="@string/auth_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_signin_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_signin"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:text="@string/auth_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_signin_password"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="251dp"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_cloud_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>