<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verificationFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.fragments.VerificationFragment">

    <TextView
        android:id="@+id/text_verification_confirm"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:text="@string/text_verification_checkEmail"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_verification_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/text_verification_sendagain"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/text_verification_retry"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_verification_sendagain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_verification_return" />

    <Button
        android:id="@+id/button_verification_sendagain"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:text="@string/button_verification_retry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_verification_sendagain"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/text_verification_sendagain"
        app:layout_constraintTop_toBottomOf="@+id/text_verification_sendagain" />

    <Button
        android:id="@+id/button_verification_return"
        android:layout_width="220dp"
        android:layout_height="53dp"
        android:text="@string/button_verification_return"
        app:layout_constraintBottom_toTopOf="@+id/text_verification_sendagain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_verification_confirm" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="288dp"
        android:layout_height="248dp"
        android:src="@drawable/logo_cloud_chat"
        app:layout_constraintBottom_toTopOf="@+id/text_verification_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>