<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_contact_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:textAlignment="gravity"
    tools:context=".contact.fragments.ContactAddFragment">

    <TextView
        android:id="@+id/text_search_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/contact_search_by"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_search_by"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_search_by" />

    <EditText
        android:id="@+id/text_search"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/auth_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/spinner_search_by"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/spinner_search_by"
        app:layout_constraintTop_toBottomOf="@+id/spinner_search_by" />

    <Button
        android:id="@+id/button_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/action_add_contact"
        app:layout_constraintEnd_toEndOf="@+id/text_search"
        app:layout_constraintTop_toBottomOf="@+id/text_search" />


</androidx.constraintlayout.widget.ConstraintLayout>