<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manage_chat_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".chat.fragments.ChatAddDeleteGetContactFragment">

    <TextView
        android:id="@+id/text_selected_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/chat_select_contact"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_select_contact"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_selected_contact" />

    <Spinner
        android:id="@+id/spinner_select_chat"
        android:layout_width="229dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_border"
        app:layout_constraintBottom_toTopOf="@+id/button_add_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_chat" />

    <Button
        android:id="@+id/button_add_contact_to_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/button_add_to_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_select_chat" />

    <Button
        android:id="@+id/button_delete_contact_from_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_delete_contact_from_chat"
        app:layout_constraintBottom_toBottomOf="@+id/button_add_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_select_chat"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/select_chat"
        android:layout_width="131dp"
        android:layout_height="30dp"
        android:layout_marginTop="76dp"
        android:text="@string/text_select_chat"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_select_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>