<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_card_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".chat.fragments.ChatItem"
    android:focusable="true"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground">

        <TextView
            android:id="@+id/text_chat_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_chat_name"
            android:textAlignment="textStart"
            android:textColor="?attr/colorOnSurface"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/text_number_chat_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_number_chat_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="279dp"
            android:layout_marginBottom="1dp"
            android:text="@string/text_chatID"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chat_delete"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toEndOf="@+id/text_chat_id"
            app:layout_constraintTop_toBottomOf="@+id/text_chat_name" />

        <ImageButton
            android:id="@+id/chat_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="#0000"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_chat_id"
            android:layout_width="55dp"
            android:layout_height="23dp"
            android:layout_marginEnd="98dp"
            android:text="@string/text_chat_Id"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toStartOf="@+id/chat_delete"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_chat_name"
            app:layout_constraintTop_toBottomOf="@+id/text_chat_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>